--- a/oversikt_datasettet.qmd
+++ b/oversikt_datasettet.qmd
@@ -9,7 +9,7 @@ library(tidyverse)
 library(haven)
 library(labelled)
 
-norlag <- read_stata("data/norlag_panel2022.dta")
+norlag <- readRDS("data/norlag.rds")
 ```
 
 Hvis man jobber med større spørreskjemaundersøkelser kan det være svært mange variable i datasettet, kanskje hundrevis, og det er vanskelig å ha en oversikt over datasettet. Bare det å finne riktig variabel kan være en utfordring. NorLAG er et eksempel på et slikt datasett. Det vil normalt følge med et dokumentasjonsnotat eller -rapport med oversikt over alle variable. Ofte til det være mest hensiktsmessig å slå opp i denne, men vi kan også ha behov for å se nærmere på dataene i R. En første ting man bør sjekke er om dataene er lest inn riktig og at det rett og slett ser greit ut.
